js/syntax_err.txt
node : E:\SD\bazi\sanb
anfu\js\bazi_logic.js:
2536
所在位置 行:1 字符: 1
+ node -c bazi_logic.j
s 2>&1 | out-file -enc
oding utf8 syntax_err.
txt
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (E:\SD\bazi   
 \sanb...i_logic.j    
s:2536:String) []    ,
 RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
        } catch (e) {
          ^^^^^

SyntaxError: Unexpecte
d token 'catch'
    at wrapSafe (node:
internal/modules/cjs/l
oader:1690:18)
    at checkSyntax (no
de:internal/main/check
_syntax:76:3)

Node.js v25.0.0
